feat(front): Reading graph by API

--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,21 +1,10 @@
-<div>
-  <canvas
-    class="demo-chart"
-    baseChart
-    [type]="'line'"
-    [data]="lineChartData"
-    [options]="lineChartOptions"
-    [legend]="lineChartLegend"
-  >
+<div class="pull-request-chart">
+  <canvas class="demo-chart" baseChart [type]="'line'" [data]="lineChartData" [options]="lineChartOptions"
+    [legend]="lineChartLegend">
   </canvas>
-
-  <canvas
-    baseChart
-    [data]="barChartData"
-    [options]="barChartOptions"
-    [plugins]="barChartPlugins"
-    [legend]="barChartLegend"
-    [type]="'bar'"
-  >
+</div>
+<div>
+  <canvas baseChart [data]="barChartData" [options]="barChartOptions" [plugins]="barChartPlugins"
+    [legend]="barChartLegend" [type]="'bar'">
   </canvas>
 </div>
