--- a/frontend/src/app/pages/home/home.component.scss
+++ b/frontend/src/app/pages/home/home.component.scss
@@ -1,4 +1,9 @@
 .pull-request-chart {
-  width: 50%;
+  width: 75%;
+  display: inline-block;
 }
 
+.reviewer-density-chart {
+  width: 75%;
+    display: inline-block;
+}
