feat: Add reference for PR metrics
- Change the Pull Request design to support metrics reference.

--- a/frontend/src/app/pages/home/home.component.scss
+++ b/frontend/src/app/pages/home/home.component.scss
@@ -1,9 +1,12 @@
 .pull-request-chart {
-  width: 75%;
+  width: 100%;
   display: inline-block;
+}
+#canvas{
+  max-height: 50px;
 }
 
 .reviewer-density-chart {
-  width: 75%;
+  width: 100%;
     display: inline-block;
 }
