--- a/frontend/src/app/components/pull-request-graph/pull-request-graph.component.scss
+++ b/frontend/src/app/components/pull-request-graph/pull-request-graph.component.scss
@@ -3,3 +3,13 @@
   display: inline-block;
   padding: 10px;
 }
+
+.metric-card {
+  min-height: 12em;
+  display: flex;
+}
+
+.formula-card {
+  max-height: 30px;
+  display: inline-block;
+}
