--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -25,6 +25,7 @@
     [pullRequestTimeReport]="pullRequestReport"
   ></app-pull-request-graph>
 </div>
+<p-divider> </p-divider>
 <div class="reviewer-density-chart">
   <app-reviewer-density-graph
     [reviewerDensity]="reviewerDensityReport"
