refact: Visual for metrics explanation
Target and Formula cards now occupied an entire row on grid

--- a/frontend/src/app/components/pull-request-graph/pull-request-graph.component.html
+++ b/frontend/src/app/components/pull-request-graph/pull-request-graph.component.html
@@ -59,7 +59,10 @@
                         </li>
                       </ul>
                     </p-card>
-                    <p-card class="col-12 lg:col-6 metric-card" header="Target">
+                    <p-card
+                      class="col-12 metric-card formula-card"
+                      header="Target"
+                    >
                       <ul class="m-0">
                         <li>
                           <i
@@ -114,7 +117,10 @@
                         <li>Capture the date/time of the final approval.</li>
                       </ul>
                     </p-card>
-                    <p-card class="col-12 lg:col-6 metric-card" header="Target">
+                    <p-card
+                      class="col-12 metric-card formula-card"
+                      header="Target"
+                    >
                       <ul class="m-0">
                         <li>
                           <i
@@ -170,7 +176,10 @@
                         <li>Capture the date/time of the final approval.</li>
                       </ul>
                     </p-card>
-                    <p-card class="col-12 lg:col-6 metric-card" header="Target">
+                    <p-card
+                      class="col-12 metric-card formula-card"
+                      header="Target"
+                    >
                       <ul class="m-0">
                         <li>
                           <i
