refact: Change titles and button search position
- Button "Search", at dashboard page, is now oriented to right;
- Code Review analyzer changes to Pull Request Insights;
    - We are not analyzing code review its self and "analyze" come with
    a bad perception, that can make a mess with adoption;
- Pull Request analysis changes to "PR Metrics Analysis". We need a better name yet.
- Some code style changes

--- a/frontend/src/app/pages/dashboard/components/filter/filter.component.html
+++ b/frontend/src/app/pages/dashboard/components/filter/filter.component.html
@@ -62,12 +62,8 @@
         </div>
     </div>
     <ng-template #footer>
-        <div class="col-span-12">
-            <p-button
-                label="Search"
-                styleClass="left-0"
-                (onClick)="onSearchClick()"
-            />
+        <div class="flex justify-end">
+            <p-button label="Search" (onClick)="onSearchClick()" />
         </div>
     </ng-template>
 </p-card>
