--- a/frontend/src/app/pages/dashboard/components/pull-request-graph/pull-request-graph.component.html
+++ b/frontend/src/app/pages/dashboard/components/pull-request-graph/pull-request-graph.component.html
@@ -1,4 +1,4 @@
-<p-card header="Pull Request analysis">
+<p-card header="PR Metric Analysis">
     <p class="m-0">
         The graph bellow overlaps all Pull Request metrics for comparative
         analysis.
