--- a/frontend/src/app/pages/dashboard/components/pull-request-graph/pull-request-graph.component.html
+++ b/frontend/src/app/pages/dashboard/components/pull-request-graph/pull-request-graph.component.html
@@ -12,6 +12,7 @@
                 [data]="lineChartData"
                 [options]="lineChartOptions"
                 height="100%"
+                ariaLabel="PR Metric analysis graph"
             >
             </p-chart>
         </div>
