--- a/frontend/src/app/pages/dashboard/components/reviewer-density-graph/reviewer-density-graph.component.html
+++ b/frontend/src/app/pages/dashboard/components/reviewer-density-graph/reviewer-density-graph.component.html
@@ -6,6 +6,7 @@
         [options]="barChartOptions"
         [plugins]="barChartPlugins"
         height="300px"
+        ariaLabel="Reviewer density graph"
     >
     </p-chart>
     <ng-template #footer></ng-template>
