feat: Crud for teams
Now your are able to create / read / update / delete teams
information.

The delete operation is a soft delete, deactivating the team.

Edit a team and deactivate it manually produces the same effect.

You can also link people to a team. But the team needs to be created early.

--- a/frontend/src/app/shared/components/paginated-lookup/paginated-lookup.component.html
+++ b/frontend/src/app/shared/components/paginated-lookup/paginated-lookup.component.html
@@ -1,5 +1,7 @@
 <p-iftalabel>
     <p-autocomplete
+        #autocomplete
+        [pAutoFocus]="focus"
         [inputId]="lookupOptions.inputId"
         [style]="{ width: '100%' }"
         [suggestions]="suggestions"
@@ -19,5 +21,7 @@
         [fluid]="true"
         [showClear]="true"
     ></p-autocomplete>
-    <label [for]="lookupOptions.inputId">Filter by team activities:</label>
+    <label [for]="lookupOptions.inputId"
+        >{{ lookupOptions.label ?? '' }}
+    </label>
 </p-iftalabel>
