--- a/frontend/src/app/pages/dashboard/components/pull-request-stats-dialog/pull-request-stats-dialog.component.html
+++ b/frontend/src/app/pages/dashboard/components/pull-request-stats-dialog/pull-request-stats-dialog.component.html
@@ -3,82 +3,93 @@
     [modal]="true"
     [dismissableMask]="true"
     [header]="pullRequestStats.title"
-    ><div class="flex">
-        <div class="card flex flex-col gap-6 w-full">
-            <div class="flex flex-col md:flex-row gap-6">
-                <div class="flex flex-wrap gap-2 w-full">
-                    <p-fieldset legend="Cycle time">
-                        <ul>
-                            <li>
-                                <strong>Created at:</strong>
-                                {{
-                                    pullRequestStats.createdAt
-                                        | date: "MMM dd 'at' HH:mm (EEE)"
-                                }}
-                            </li>
-                            <li>
-                                <strong>Closed at:</strong>
-                                {{
-                                    pullRequestStats.closedAt
-                                        | date: "MMM dd 'at' HH:mm (EEE)"
-                                }}
-                            </li>
-                            <li>
-                                <strong>Merge Waiting time:</strong>
-                                {{
-                                    pullRequestStats.mergeWaitingTimeMinutes
-                                        | minToHours
-                                }}
-                            </li>
-                            <li>
-                                <strong>Merge mode:</strong>
-                                {{ pullRequestStats.mergeMode }}
-                            </li>
-                        </ul></p-fieldset
-                    >
-                </div>
-                <div class="flex flex-wrap gap-2 w-full">
-                    <p-fieldset legend="Revision time">
-                        <ul>
-                            <li>
-                                <strong>First comment date:</strong>
-                                {{
-                                    pullRequestStats.firstCommentDate
-                                        | date: "MMM dd 'at' HH:mm (EEE)"
-                                }}
-                            </li>
-                            <li>
-                                <strong>First comment waiting time:</strong>
-                                {{
-                                    pullRequestStats.firstCommentWaitingMinutes
-                                        | minToHours
-                                }}
-                            </li>
-                            <li>
-                                <strong>Time in revision:</strong>
-                                {{
-                                    pullRequestStats.revisionWaitingTimeMinutes
-                                        | minToHours
-                                }}
-                            </li>
-                        </ul></p-fieldset
-                    >
-                </div>
-            </div>
-            <div class="flex flex-col md:flex-row gap-6">
-                <p-fieldset legend="Sizes">
-                    <ul>
-                        <li>
-                            <strong>File count:</strong>
-                            {{ pullRequestStats.fileCount }}
-                        </li>
-                        <li>
-                            <strong>Thread count:</strong>
-                            {{ pullRequestStats.threadCount }}
-                        </li>
-                    </ul></p-fieldset
-                >
-            </div>
-        </div>
-    </div></p-dialog
 >
+    <div class="fieldset-container">
+        <p-fieldset legend="Cycle time">
+            <ul class="list-spacing">
+                <li>
+                    <label>Created at:</label>
+                    <span class="dynamic-content">
+                        {{
+                            pullRequestStats.createdAt
+                                | date: "MMM dd 'at' HH:mm (EEE)"
+                        }}
+                    </span>
+                </li>
+                <li>
+                    <label>Closed at:</label>
+                    <span class="dynamic-content">
+                        {{
+                            pullRequestStats.closedAt
+                                | date: "MMM dd 'at' HH:mm (EEE)"
+                        }}
+                    </span>
+                </li>
+                <li>
+                    <label>Merge Waiting time:</label>
+                    <span class="dynamic-content">
+                        {{
+                            pullRequestStats.mergeWaitingTimeMinutes
+                                | minToHours
+                        }}
+                    </span>
+                </li>
+                <li>
+                    <label>Merge mode:</label>
+                    <span class="dynamic-content">
+                        {{ pullRequestStats.mergeMode }}
+                    </span>
+                </li>
+            </ul>
+        </p-fieldset>
+
+        <p-fieldset legend="Revision time">
+            <ul class="list-spacing">
+                <li>
+                    <label>First comment date:</label>
+                    <span class="dynamic-content">
+                        {{
+                            pullRequestStats.firstCommentDate
+                                | date: "MMM dd 'at' HH:mm (EEE)"
+                        }}
+                    </span>
+                </li>
+                <li>
+                    <label>First comment waiting time:</label>
+                    <span class="dynamic-content">
+                        {{
+                            pullRequestStats.firstCommentWaitingMinutes
+                                | minToHours
+                        }}
+                    </span>
+                </li>
+                <li>
+                    <label>Time in revision:</label>
+                    <span class="dynamic-content">
+                        {{
+                            pullRequestStats.revisionWaitingTimeMinutes
+                                | minToHours
+                        }}
+                    </span>
+                </li>
+            </ul>
+        </p-fieldset>
+
+        <p-fieldset legend="Sizes">
+            <ul class="list-spacing">
+                <li>
+                    <label>File count:</label>
+                    <span class="dynamic-content">
+                        {{ pullRequestStats.fileCount }}
+                    </span>
+                </li>
+                <li>
+                    <label>Thread count:</label>
+                    <span class="dynamic-content">
+                        {{ pullRequestStats.threadCount }}
+                    </span>
+                </li>
+            </ul>
+        </p-fieldset>
+    </div>
+</p-dialog>
